infrastructure/common/ec2.tf
resource "aws_launch_template" "demoapp" {
  name_prefix   = "demoapp-"
  image_id      = var.ami_amazon_linux_id
  instance_type = var.instance_type
  user_data = base64encode(file("user_data.sh"))

  network_interfaces {
    associate_public_ip_address = true
    security_groups             = [aws_security_group.web.id]
  }
}

resource "aws_security_group" "web" {
  name = "demoapp-sg"
  vpc_id = aws_vpc.main.id
  description = "Allow HTTP and SSH"

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
